syntax = "proto3";

package msger.api.userchat.v1;

option go_package = "github.com/ryanreadbooks/whimer/msger/api/userchat/v1";

import "msg/msg.proto";
import "userchat/v1/chat.proto";
import "buf/validate/validate.proto";

// 用户会话相关
service UserChatService {
  // 发起单聊
  rpc CreateP2PChat(CreateP2PChatRequest) returns (CreateP2PChatResponse);
  // 在会话中发送消息
  rpc SendMsgToChat(SendMsgToChatRequest) returns (SendMsgToChatResponse);
}

message CreateP2PChatRequest {
  int64 uid = 1 [ (buf.validate.field).int64.gt = 0 ];
  int64 target = 2 [ (buf.validate.field).int64.gt = 0 ];
}

message CreateP2PChatResponse { string chat_id = 1; }

message MsgReq {
  string cid = 1 [ (buf.validate.field).string.len = 32 ];
  msger.api.msg.MsgType type = 2
      [ (buf.validate.field).enum.defined_only = true ];
  oneof content {
    option (buf.validate.oneof).required = true;
    msger.api.msg.MsgContentText text = 3;
    msger.api.msg.MsgContentImage image = 4;
  }
}

message SendMsgToChatRequest {
  int64 sender = 1 [ (buf.validate.field).int64.gt = 0 ];
  string chat_id = 2 [ (buf.validate.field).string.min_len = 1 ];
  MsgReq msg = 3;
}

message SendMsgToChatResponse { string msg_id = 1; }
